q11/11.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: web-deployment
  name: web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web-deployment
    spec:
      containers:
        - image: nginx:1.21
          name: nginx
          resources: {}
status: {}

---
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  selector:
    app: web-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
    - host: "web.example.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-service
                port:
                  number: 80
c
